# CardRotator

./: LICENSE.txt  README.md  flip_notebook.ipynb  pyproject.toml
CardRotator/: __init__.py
card_rotator.egg-info/: PKG-INFO  SOURCES.txt
card_rotator_yoshiman.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
